@@ -503,7 +503,6 @@ use_question_toggle_cb (GtkCheckButton *check, gpointer data)
 static void
 set_fullscreen_actions (gboolean is_fullscreen)
 {
-	/* We need to set sensitivity, else we don't get the shortcut key */
 	gtk_action_set_sensitive (leavefullscreen_action, is_fullscreen);
 	gtk_action_set_visible (leavefullscreen_action, is_fullscreen);
 
@@ -512,20 +511,14 @@ set_fullscreen_actions (gboolean is_fullscreen)
 }
 
 static void
-fullscreen_callback (GtkToggleAction *action)
+fullscreen_callback (GtkAction *action)
 {
-	gboolean is_fullscreen;
-	is_fullscreen = (GTK_ACTION (action) == fullscreen_action);
-
-	set_fullscreen_actions (is_fullscreen);
-
-	if (is_fullscreen)
+	if (action == fullscreen_action)
 		gtk_window_fullscreen (GTK_WINDOW (window));
 	else
 		gtk_window_unfullscreen (GTK_WINDOW (window));
 }
   	 
-/* Just in case something else takes us to/from fullscreen. */
 static void
 window_state_callback (GtkWidget *widget, GdkEventWindowState *event)
 {
